syntax = "proto3";
package mfa_factor;

option go_package = "nfxid/protos/gen/auth/mfa_factor;mfafactorpb";

import "google/protobuf/timestamp.proto";

// MFA 类型枚举
enum AuthMfaType {
  AUTH_MFA_TYPE_UNSPECIFIED = 0;
  AUTH_MFA_TYPE_TOTP = 1;        // TOTP
  AUTH_MFA_TYPE_SMS = 2;         // SMS
  AUTH_MFA_TYPE_EMAIL = 3;       // Email
  AUTH_MFA_TYPE_WEBAUTHN = 4;    // WebAuthn
  AUTH_MFA_TYPE_BACKUP_CODE = 5; // 备份码
}

// MFA 因子信息
message MfaFactor {
  string id = 1;                         // 因子ID (UUID)
  string factor_id = 2;                  // 因子标识符 (varchar(255))
  string tenant_id = 3;                  // 租户ID (UUID)
  string user_id = 4;                    // 用户ID (UUID)
  AuthMfaType type = 5;                  // MFA 类型：totp, sms, email, webauthn, backup_code
  optional string secret_encrypted = 6;  // 加密的密钥 (text)
  optional string phone = 7;             // 手机号 (varchar(20))
  optional string email = 8;             // 邮箱 (varchar(255))
  optional string name = 9;              // 名称 (varchar(255))
  bool enabled = 10;                     // 是否启用
  google.protobuf.Timestamp created_at = 11;          // 创建时间
  optional google.protobuf.Timestamp last_used_at = 12; // 最后使用时间
  optional string recovery_codes_hash = 13;           // 恢复码哈希 (text)
  google.protobuf.Timestamp updated_at = 14;          // 更新时间
  optional google.protobuf.Timestamp deleted_at = 15; // 软删除时间
}

// MfaFactor 服务 - 供其他服务通过 gRPC 管理MFA因子
service MfaFactorService {
  // 根据ID获取MFA因子
  rpc GetMfaFactorByID (GetMfaFactorByIDRequest) returns (GetMfaFactorByIDResponse);
  
  // 根据因子ID获取MFA因子
  rpc GetMfaFactorByFactorID (GetMfaFactorByFactorIDRequest) returns (GetMfaFactorByFactorIDResponse);
  
  // 根据用户ID获取MFA因子列表
  rpc GetMfaFactorsByUserID (GetMfaFactorsByUserIDRequest) returns (GetMfaFactorsByUserIDResponse);
  
  // 批量获取MFA因子
  rpc BatchGetMfaFactors (BatchGetMfaFactorsRequest) returns (BatchGetMfaFactorsResponse);
}

// MfaFactor Service Messages
message GetMfaFactorByIDRequest {
  string id = 1;
}

message GetMfaFactorByIDResponse {
  MfaFactor mfa_factor = 1;
}

message GetMfaFactorByFactorIDRequest {
  string factor_id = 1;
}

message GetMfaFactorByFactorIDResponse {
  MfaFactor mfa_factor = 1;
}

message GetMfaFactorsByUserIDRequest {
  string user_id = 1;
  optional string tenant_id = 2;
  optional bool enabled_only = 3;
}

message GetMfaFactorsByUserIDResponse {
  repeated MfaFactor mfa_factors = 1;
}

message BatchGetMfaFactorsRequest {
  repeated string ids = 1;
}

message BatchGetMfaFactorsResponse {
  repeated MfaFactor mfa_factors = 1;
}
